# ShopStream

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ShopStream_Architecture.drawio  dataform.json  docker-compose.yml  package-lock.json  package.json
.github/workflows/: dataflow_test_and_deploy.yml  gcf_deploy_pubsub_to_gcs.yml  gcf_deploy_source_data_gen.yml
airflow/: Dockerfile
airflow/dags/: batch_pipeline.py
airflow/include/: airflow_utils.py
definitions/: package.json
definitions/1_bronze/: clickstream_events.sqlx  customer_support_tickets.sqlx  product_catalog.sqlx  sales_transactions.sqlx
definitions/2_silver/: d_customers.sqlx  d_products.sqlx  f_sales.sqlx
definitions/3_gold/: user_behavior_summ.sqlx
definitions/external_tables/: click_events.sql  customers_support.sql  product_catalog.sql  sales_transactions.sql
shopstream/: pyproject.toml
shopstream/1_api_sources/: main.py  utils.py
shopstream/1_api_sources/tests/: test_utils.py
shopstream/2_pubsub-2-gcs/: README.md  config.json  config.local.json  main.py  main_helper.py  requirements.txt  utils.py
shopstream/2_pubsub-2-gcs/tests/: test_main.py  test_main_helper.py  test_utils.py
shopstream/3_dataflow/: config.py  pipeline.py  requirements.txt  transforms.py
shopstream/3_dataflow/tests/: test_transforms.py
shopstream/gcf/api_sources/: main.py  main_helper.py  utils.py
shopstream/gcf/api_sources/source-data/: clickstream_events.json  customer_support.json  product_catalog.json  transactions.csv
shopstream/gcf/pubsub-2-gcs/: requirements.txt  utils.py
